# Assignment_config

./: .gitignore  Cargo.toml  README.md  run.sh
src/: configuration_parameters.rs  main.rs  output_file.rs  read_write_data_files.rs  structure.rs
src/process/: mod.rs
